[package]
name = "mythril_osc"
version = "0.1.0"
edition = "2021"

[lib]
name = "mythril_osc"
path = "src/lib.rs"
crate-type = ["cdylib","lib"]

[[bin]]
name = "mythril_osc_standalone"
path = "src/main.rs"

[dependencies]

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"]}
wt_osc = { git = "https://github.com/AquaEBM/wt_osc.git" }
polygraph = { git = "https://github.com/AquaEBM/polygraph.git" }