[package]
name = "mythril"
version = "0.1.0"
edition = "2024"

[dependencies]

simd_util = { git = "https://github.com/AquaEBM/simd_util.git", default-features = false }
rtrb = "0.3"

[features]

default = ["std_simd"]
std_simd = ["simd_util/std_simd"]
core_simd_crate = ["simd_util/core_simd_crate"]