[package]
name = "polygraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fnv = "1.0.4"
simd_util = { path = "../simd_util", features = ["non_std_simd"] }
rtrb = "0.2"
atomic_refcell = "0.1"
arrayvec = "0.7"