[package]
name = "polygraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fnv = "1"
simd_util = { path = "../simd_util", default-features = false }
rtrb = "0.3"

[features]

default = ["std_simd"]
std_simd = ["simd_util/std_simd"]
core_simd_crate = ["simd_util/core_simd_crate"]