[package]

name = "simd_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

core_simd = { git = "https://github.com/rust-lang/portable-simd.git", optional = true }
std_float = { git = "https://github.com/rust-lang/portable-simd.git", optional = true }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }
num = { version = "0.4.1", optional = true }

cfg-if = "1.0"

[features]

# for testing purposes
# default = ["non_std_simd", "transfer_funcs", "nih_plug"]
non_std_simd = ["dep:core_simd", "dep:std_float"]
transfer_funcs = ["dep:num"]